<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/layout_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/field_pick_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_weight="5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.9">

            <AutoCompleteTextView
                android:id="@+id/pick_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/default_map_text"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/btn_go"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:text="@string/go_button_text"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/layout_panel"
        tools:context=".DriverMapActivity" />

    <androidx.cardview.widget.CardView
        android:id="@+id/driver_pickup_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="10">

            <TextView
                android:id="@+id/driver_pickup_name"
                style="@style/TextAppearance.Large"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="9"
                android:text="@string/default_pickup_name" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/driver_pickup_photo"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="@dimen/driver_pickup_photo_margin"
                android:layout_marginTop="@dimen/driver_pickup_photo_margin"
                android:layout_marginBottom="@dimen/driver_pickup_photo_margin"
                android:src="@drawable/default_avatar" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>
</RelativeLayout>


